--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  align-items: center;
 }
 
 .logo {
@@ -11,9 +15,17 @@
   padding: 4px 32px;
 }
 
+.left-links ul,
+.right-links ul {
+  display: flex;
+}
+
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0;
+  margin: 0;
+  gap: 8px;
 }
 
 a {
