--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -1,6 +1,10 @@
 /* this is some magical font-importing.  
 you'll learn about it later. */
-@import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap");
+
+:root {
+  --gap: 16px;
+}
 
 body {
   margin: 0;
@@ -11,12 +15,38 @@ body {
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
-  box-shadow: 0 0 8px rgba(0,0,0,.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  padding: 8px;
+  /* justify-content: space-between; */
 }
 
+.left {
+  margin-right: auto;
+  display: flex;
+  gap: var(--gap);
+}
+
+.left .links {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 16px;
+  align-items: center;
+}
+
+/* .links li {
+  padding-left: 12px;
+} */
+
+.right {
+  display: flex;
+  gap: var(--gap);
+  align-items: center;
+}
 .profile-image {
   background: rebeccapurple;
-  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+  box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
