--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -10,6 +10,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +24,24 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+/* solution */
+/* body {
+  text-align: center;
+} */
+
+.title {
+  margin-bottom: 32px;
+}
+.container {
+  display: flex;
+  /* justify-content: center;
+  gap: 52px; */
+  justify-content: space-around;
+}
+
+.card {
+  width: 200px;
+  text-align: center;
 }
